[package]
name = "engine3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-iter = "0.4.1"
glam = "0.24.2"
log = "0.4.20"
pixels = "0.14.0"
winit = { version = "0.30.5", features = ["default", "rwh_05"] }
